updated aasa file

--- a/app-switch-return-to-browser-tab/apple-app-site-association.json
+++ b/app-switch-return-to-browser-tab/apple-app-site-association.json
@@ -5,6 +5,10 @@
       {
         "appID": "4X95594BDS.com.abhinay.ReturnToBrowser",
         "paths": [ "/app-switch-checkout", "/app-switch-return-to-browser-tab" ]
+      },
+      {
+          "appID": "Q822Z38BYB.com.abhinay.ReturnToBrowser2",
+          "paths": ["/app-switch-checkout", "/app-switch-return-to-browser-tab"]
       }
     ]
   }
